Add code to check for exclusive plugin files